# mailer

./: .env  .gitignore  Cargo.toml  config.yaml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs
src/routes/: subscribe.rs
tests/: health_check.rs
