[package]
name = "learning-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There is _some_ turbulence when working with betas,
# we are pinning a few other supporting packages to ensure
# compatibility.
actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"