[package]
name = "learning-actix"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "learning-actix"

[dependencies]
serde = {version = "1", features = ["derive"]}
actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"
actix-rt = "2.3.0"
tokio = "1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
